# SimEngine

./: .gitignore  .gitmodules  .travis.yml  A.csv  CMakeLists.txt  GenerateMinimumProject.bat  GenerateProject.bat  GenerateSimEngine.bat  LICENSE  README.md  RunSimEngine.bat  appveyor.yml  gen.bat
ConfigFiles/: Room.xml  SmartEnergy_1.xml  SmartEnergy_2.xml  SmartEnergy_3.xml  SmartEnergy_4.xml  SmartEnergy_test.xml  SmartHouse_1.xml  SmartTerminalClass_1.xml  SmartTerminalClass_2.xml  SmartTraffic_1.xml  SmartTraffic_2.xml  SmartTraffic_3.xml  Street.xml  TestConfig.xml  conf.xml  default_task_2.xml  default_task_3.xml  default_task_4.xml  default_task_4_debug.xml  default_task_4_debug_Min.xml  default_task_4_debug_OpenGL.xml  default_task_5.xml  default_task_5_debug_OpenGL.xml  default_task_6.xml  default_task_7.xml  default_task_8.xml
ConfigFiles/SmartEnergy_1/: ExternalAction.xml  Room.xml  SmartThing.xml  conf.xml
ConfigFiles/SmartEnergy_2/: ExternalAction.xml  SmartThing.xml  conf.xml
ConfigFiles/SmartEnergy_3/: Room.xml  SmartThing.xml
ConfigFiles/SmartEnergy_3_4/: conf.xml
ConfigFiles/SmartHouse_1/: Room.xml
ConfigFiles/SmartTerminalClass_1/: Conf.xml  TerminalClass.xml
ConfigFiles/SmartTraffic_1/: SmartThing.xml  Street.xml  conf.xml
ConfigFiles/SmartTraffic_2/: SmartThing.xml  Street.xml  conf.xml
ConfigFiles/SmartTraffic_3/: SmartThing.xml  Street.xml
ConfigFiles/TestConfig/: MainSet.xml  actions.xml  (+1 more)
Dll/: CMakeLists.txt
Dll/CarCreator/: CMakeLists.txt  CarCreator.cpp  CarCreator.hpp
Dll/CarDestroyer/: CMakeLists.txt  CarDestroyer.cpp  CarDestroyer.hpp
Dll/CarManager/: CMakeLists.txt  CarManager.cpp  CarManager.hpp
Dll/CrossRoad/: CMakeLists.txt  Car.cpp  Car.hpp  CrossRoad.cpp  CrossRoad.hpp  CrossRoadCreator.cpp  Road.cpp  Road.hpp  Trajectory.hpp
Dll/Desktop/: CMakeLists.txt  Desktop.cpp  Desktop.hpp
Dll/DummyObject/: CMakeLists.txt  DummyObject.cpp  DummyObject.h
Dll/DummySmartThing/: CMakeLists.txt  DummyActuator.h  DummySensor.h  DummySmartThing.cpp  DummySmartThing.h
Dll/DummyStaticObject/: CMakeLists.txt  DummyStaticObject.cpp  DummyStaticObject.h
Dll/Monoblock/: CMakeLists.txt  Monoblock.cpp  Monoblock.h
Dll/Road/: CMakeLists.txt  Car.cpp  Car.hpp  ObjectCreator.cpp  Road.cpp  Road.hpp
Dll/Room/: CMakeLists.txt  Room.cpp  Room.h
Dll/SmartEnergyAutoProgram/: CMakeLists.txt  SmartEnergyAutoProgram.cpp  SmartEnergyAutoProgram.hpp
Dll/SmartEnergyProgram/: CMakeLists.txt  SmartEnergyProgram.cpp  SmartEnergyProgram.hpp
Dll/SmartHouseProgram/: CMakeLists.txt  SmartHouseProgram.cpp  SmartHouseProgram.hpp
Dll/SmartSocket/: CMakeLists.txt  ElectricitySensor.h  SmartSocket.cpp  SmartSocket.h  Switch.h
Dll/SmartTerminalClassDummyProgram/: CMakeLists.txt  SmartTerminalClassDummyProgram.cpp  SmartTerminalClassDummyProgram.hpp
Dll/SmartTerminalClassProgram/: CMakeLists.txt  SmartTerminalClassProgram.cpp  SmartTerminalClassProgram.hpp
Dll/Street/: CMakeLists.txt  Street.cpp  Street.hpp
Dll/StreetAutoProgram/: CMakeLists.txt  StreetAutoProgram.cpp  StreetAutoProgram.hpp
Dll/StreetPeakProgram/: CMakeLists.txt  StreetPeakProgram.cpp  StreetPeakProgram.hpp
Dll/StreetProgram/: CMakeLists.txt  StreetProgram.cpp  StreetProgram.hpp
Dll/Table/: CMakeLists.txt  Table.cpp  Table.h
Dll/Terminal/: CMakeLists.txt  Terminal.cpp  Terminal.h
Dll/TestObjectOfObservation/: CMakeLists.txt  TestObjectOfObservation.cpp  TestObjectOfObservation.h  TestTerminal1.cpp  TestTerminal1.h
Dll/TestProgram/: CMakeLists.txt  TestProgram.cpp  TestProgram.h
Dll/TestSmartThing/: CMakeLists.txt  TestElectricitySensor.h  TestSmartSocket.cpp  TestSmartSocket.h  TestSmartThing.cpp  TestSmartThing.h  TestSwitch.h
Dll/TestStaticObject/: CMakeLists.txt  TestRoom.cpp  TestRoom.h  TestStaticObject.cpp  TestStaticObject.h
Tests/: CMakeLists.txt
Tests/src/: ActuatorTest.cpp  DataPacketTest.cpp  DataStoreTest.cpp  EnvironmentScriptTest.cpp  ExternalActionTest.cpp  MainSetTest.cpp  ManagementProgramTest.cpp  ObjectOfObservationTest.cpp  ObjectTest.cpp  PropertiesTest.cpp  SceneTest.cpp  SensorTest.cpp  SmartThingScheduleTest.cpp  SmartThingTest.cpp  WorkManagerTest.cpp  actions.xml  common.hpp  mainTest.cpp
scripts/: GenerateMinimumProject.bat  GenerateProject.bat  RemoveLibrariesFilesLinux.sh  RemoveLibrariesFilesWindows.bat
src/: CMakeLists.txt  Camera.cpp  Mesh.cpp  SmartHouse.cpp  mainSmartHouse.cpp  mainTest.cpp  mainTrafficSim.cpp
src/BasicExamples/: Actuator.cpp  CMakeLists.txt  DataPacket.cpp  Object.cpp  ObjectOfObservation.cpp  Properties.cpp  Sensor.cpp  SmartThing.cpp  StaticObject.cpp  common.cpp
src/BasicExamples/SmartHouse/: CMakeLists.txt  Desktop.cpp  Room.cpp  Table.cpp  Terminal.cpp  main.cpp
src/BasicExamples/TrafficSim/: CMakeLists.txt  Car.cpp  Road.cpp  Street.cpp  main.cpp
src/Core/: Actuator.cpp  CMakeLists.txt  DataPacket.cpp  Dll_manager.cpp  EnvironmentScript.cpp  ExternalActionSchedule.cpp  MainSet.cpp  Object.cpp  ObjectOfObservation.cpp  Parameters.cpp  ProgramFactory.cpp  Properties.cpp  Scene.cpp  Sensor.cpp  SmartThing.cpp  StaticObject.cpp  WorkManager.cpp  common.cpp  main.cpp
src/CoreMain/: CMakeLists.txt  main.cpp
src/Engine/: CMakeLists.txt  Camera.cpp  FirstPersonView.cpp  GObject.cpp  GObjectProperties.cpp  GraphicManager.cpp  IsometricView.cpp  LightRenderer.cpp  Mesh.cpp  MeshRenderer.cpp  Object.cpp  Renderer.cpp  ShaderLoader.cpp  TextureLoader.cpp  Transform.cpp  WindowManager.cpp
src/Launcher/: CMakeLists.txt  main.cpp
src/SimEngine/: Actuator.cpp  CMakeLists.txt  DataPacket.cpp  Object.cpp  ObjectOfObservation.cpp  Properties.cpp  Sensor.cpp  SmartThing.cpp  SmartThingSchedule.cpp  StaticObject.cpp  common.cpp
src/SmartHouse/: CMakeLists.txt  Desktop.cpp  GTerminal.cpp  Monitor.cpp  Monoblock.cpp  Room.cpp  SmartHouse.cpp  TTerminal.cpp  Table.cpp  Terminal.cpp  main.cpp
src/SmartHouseData/: CMakeLists.txt
src/TrafficSim/: CMakeLists.txt  Car.cpp  Ground.cpp  Road.cpp  Street.cpp  TrafficLight.cpp  TrafficSim.cpp  main.cpp
src/TrafficSimData/: CMakeLists.txt  main.cpp
(+162 files in other folders)
