
# file(GLOB hdrs "*.h*")
# file(GLOB_RECURSE source_files "*.cpp")


# # add_library(TestSmartThing SHARED ${source_files} ${hdrs})


# add_definitions(-DGLEW_NO_GLU)

# target_link_libraries(TestSmartThing
# 						Core
# 						)
						
# if (${USE_OPENGL})
# 	target_link_libraries(TestSmartThing
# 							# Engine
# 							glfw 
# 							libglewmx_static
# 							# LinearMath 
# 							${OPENGL_LIBRARIES}
# 	)
# endif()

# set_property(TARGET TestSmartThing PROPERTY FOLDER "DLLs") 						
	